Fixed database URL to URI